# bundle-examples

./: .gitignore  .ruff.toml  DEMO.md  NYC Taxi Trip Analysis.lvdash.json  README.md  TEST-DO-NOT-MERGE.md  contributing.md  databricks.yml  new_notebook.ipynb  pieter shreyas example.dbquery.ipynb  pyproject.toml  requirements.txt  sample_alert.dbalert.json
contrib/: README.md
dbt_project/: databricks.yml  dbt_project.yml  profile_template.yml
dbt_sql/: README.md  databricks.yml
default_minimal/: README.md  databricks.yml
default_python/: README.md  Untitled Notebook 2024-11-21 13_25_14.py  databricks.yml  pyproject.toml  setup.py
default_sql/: README.md  databricks.yml
docs/: EXPECTATIONS.md
framework/: README.md  __init__.py  config.py  dimension_utils.py  dlt.py  dw.py  fact_utils.py  metadata.py  utils.py  write.py
job_with_python_wheel_task/: .gitignore  bundle.yml
knowledge_base/: .gitignore
knowledge_base/private_wheel_packages/example_private_wheel/: pyproject.toml
knowledge_base/private_wheel_packages/example_private_wheel/src/example_private_wheel/: __init__.py
knowledge_base/pydabs_job_with_task_values/: README.md  databricks.yml  pyproject.toml
knowledge_base/pydabs_job_with_task_values/resources/: task_values_simple.py
knowledge_base/pydabs_job_with_task_values/src/: notebook_task_a.py  notebook_task_b.py
knowledge_base/pydabs_job_with_task_values/src/xcom/: consumer.ipynb  consumer.py  producer.ipynb  producer.py
knowledge_base/udtf-operator/: README.md  databricks.yml  pyproject.toml
knowledge_base/udtf-operator/explorations/: sample_notebook.ipynb
knowledge_base/udtf-operator/fixtures/: titanic_sample.csv
knowledge_base/udtf-operator/resources/: udtf_job.yml
knowledge_base/udtf-operator/src/: kmeans_udtf.py  main.py
knowledge_base/udtf-operator/tests/: conftest.py  test_kmeans_udtf.py
lakeflow_pipelines/: README.md
llmops-basic/: README.md  (+1 more)
(+824 files in other folders)
