[project]
name = "udtf_operator"
version = "0.0.1"
authors = [{ name = "lennart.kats@databricks.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[project.scripts]
main = "udtf_operator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 125
