[project]
name = "example-private-wheel"
version = "0.1.0"
description = "Dummy wheel to demonstrate how to include private wheels in your Databricks Asset Bundle"
authors = [
    { name = "Pieter Noordhuis", email = "pieter.noordhuis@databricks.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
